<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_lampada"
    tools:context="com.example.felipe.superapp.lampada">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lamp"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="#000"
        android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnAzul"
                android:text="@string/lpAzul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BotaoAzul"/>
            <Button
                android:id="@+id/btnVerde"
                android:text="@string/lpVerde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BotaoVerde"/>
            <Button
                android:id="@+id/btnVermelho"
                android:text="@string/lpVer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BotaoVermelho"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnMarrom"
                android:text="@string/lpMa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BotaoMarrom"/>
            <Button
                android:id="@+id/btnLaranja"
                android:text="@string/lpLaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BotaoLaranja"/>
            <Button
                android:id="@+id/btnAmarelo"
                android:text="@string/lpAma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BotaoAmarelo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnRoxo"
                android:text="@string/lpRoxo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BotaoRoxo"/>
            <Button
                android:id="@+id/btnBranco"
                android:text="@string/lpBranco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BotaoBranco"/>

        </LinearLayout>

        <TextView
            android:id="@+id/Lampad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="90sp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/lpLuz" />

        <Switch
            android:id="@+id/btnAlternar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Alternar"
            android:layout_gravity="center" />

</LinearLayout>

