<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_calc"
    tools:context="com.example.felipe.superapp.calc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/tituloCalc"
        android:textColor="@color/colorBlack"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNum1"
        android:inputType="number"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNum2"
        android:inputType="number"
        />
    <!--              SOMAR         -->
    <Button
        android:id="@+id/soma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcSomar"
        android:onClick="Soma"
        />
    <!--             DIMINUIR           -->
    <Button
        android:id="@+id/sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcSub"
        android:onClick="Subt"
        />
    <!--               MULTIPLICAR           -->
    <Button
        android:id="@+id/mult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcMult"
        android:onClick="Mult"
        />
    <!--                      DIVIDIR           -->
    <Button
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcDiv"
        android:onClick="Div"
        />
    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text=""
        />

    </LinearLayout>
</ScrollView>
